--- a/src/content/blog/2022-08-21-sample-gallery-post.mdx
+++ b/src/content/blog/2022-08-21-sample-gallery-post.mdx
@@ -1,4 +1,5 @@
 ---
+draft: true
 title: Sample Gallery post
 description: Test post with a photo gallery and lightbox (using PhotoSwipe)
 author: Chris Tham
@@ -10,7 +11,8 @@ categories:
 tags:
   - mdx
   - sample
----  
+---
+
 import Gallery from '../../components/gallery.astro'
 
 ## Gallery with Lightbox
