--- a/src/content/blog/2022-08-23-sample-mdx-post.mdx
+++ b/src/content/blog/2022-08-23-sample-mdx-post.mdx
@@ -1,4 +1,5 @@
 ---
+draft: true
 title: Sample MDX post
 description: Test post illustrating the use of MDX.
 author: Chris Tham
@@ -10,7 +11,8 @@ categories:
 tags:
   - mdx
   - sample
----  
+---
+
 import Map from '../../components/map.astro'
 
 export const hello = 'Hello World'
@@ -23,4 +25,4 @@ The above title is a variable declared in MDX.
 
 The following is the Map component defined in this starter
 
-<Map loc={[37.33214,-122.02992]} zoom={17} />
+<Map loc={[37.33214, -122.02992]} zoom={17} />
