--- a/src/content/blog/2023-01-26-roadmap.md
+++ b/src/content/blog/2023-01-26-roadmap.md
@@ -1,4 +1,5 @@
 ---
+draft: true
 title: Roadmap
 description: List of features to be considered for future versions of this starter.
 author: Chris Tham
